--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/vite": "^4.1.5",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@tailwindcss/postcss": "^4.1.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-syntax-highlighter": "^15",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
