--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@tailwindcss/vite": "^4.1.5",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-syntax-highlighter": "^15.6.1",
+    "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
