--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview",
     "tailwind:init": "tailwindcss init -p",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@radix-ui/react-tabs": "^1.1.11",
     "@tailwindcss/vite": "^4.1.5",
+    "@testing-library/react": "^16.3.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.7",
@@ -37,6 +40,7 @@
     "@storybook/react-vite": "8.6.12",
     "@storybook/test": "8.6.12",
     "@tailwindcss/postcss": "^4.1.5",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-syntax-highlighter": "^15",
@@ -49,10 +53,12 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "playwright": "^1.52.0",
     "postcss": "^8.5.3",
     "storybook": "8.6.12",
     "tailwindcss": "^4.1.5",
+    "ts-jest": "^29.3.2",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
   },
